# src/api/models/SpecBox/WebApi/Model/Users/update-user-request.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface UpdateUserRequest {
+  description?: string | null;
+  email?: string | null;
+  name?: string | null;
+  rowVersion: string;
+}
