# src/app/profile/model/user-update.model.ts
@@ -1,0 +1,6 @@
+export interface UpdateUser {
+  email?: string;
+  name?: string;
+  description?: string;
+  rowVersion: string;
+}
